# comsa-portal

./: README.md
admin/: .odk.json
analyses/2df08020-d68d-417a-bfa2-cf80836ed2e6/: .metadata.json  .script.R  tim.csv
client/: consts.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  urls.ts  utils.ts
client/actions/: auth.ts  crud.ts
data/odk/: tim.txt  (+1 more)
html/: asset-manifest.json  index.html  precache-manifest.11319baf340d595ae3fb5699eaa4a626.js  precache-manifest.20240512be31df891c25dd2ea58058f3.js  precache-manifest.aff3f0b547d01ff53c84ec416f79e268.js  precache-manifest.df49e6aafa0e60bc29b6c2e94078f90b.js  service-worker.js
server/: Cargo.toml
server/html/: index.html  roboto.css
server/html/404/: index.html
server/html/_next/static/chunks/: 231-582df9938579bde4fadd.js  595.3ed7d130e5cf132a2048.js  695-983e997cfc508d134f27.js  724-eb8f509ff86e1aaf04d8.js  935-dad8a249344346c80d8a.js  971.af3f53835978c4ef1ae0.js  main-3d49fc9208a45ca951a0.js  webpack-fa9f34f6f1e316c234e7.js
server/html/_next/static/chunks/pages/: _app-688a35e2756030d45d10.js  admin-e06de329cde92453df5f.js  analysis-ec801828b7971ec4b0a3.js  data-6ea26171d53763ec4e71.js  index-85d43addaf2c9680d27a.js  login-614bbf221dd3e93f6fb4.js
server/html/_next/static/t1AUFaGbno21vytNllK6Z/: _buildManifest.js
server/html/admin/: index.html
server/html/analysis/: index.html
server/html/data/: index.html
server/html/login/: index.html
server/src/: cors.rs  main.rs  real_time.rs  run_r.rs  run_stata.rs  types.rs  users_and_sessions.rs  utils.rs
(+56 files in other folders)
